--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,38 +1,22 @@
-# Nginx Configuration for opencanvas
-#
-# This configuration file sets up an Nginx server that listens on ports 80 and 443.
-# It redirects all HTTP traffic (port 80) to HTTPS (port 443) for the domain names
-# opencanvas.online and www.opencanvas.online
-#
-# For HTTPS traffic, it proxies requests to three different local services depending on the path:
-# - Requests to / are proxied to http://localhost:8000
 
-
-#user  nobody;
-#Defines which Linux system user will own and run the Nginx server
-
+#user http;
 worker_processes  1;
-#Referes to single threaded process. Generally set to be equal to the number of CPUs or cores.
 
-#error_log  logs/error.log; #error_log  logs/error.log  notice;
-#Specifies the file where server logs. 
+#error_log  logs/error.log;
+#error_log  logs/error.log  notice;
+#error_log  logs/error.log  info;
 
 #pid        logs/nginx.pid;
-#nginx will write its master process ID(PID).
+
 
 events {
     worker_connections  1024;
-    # worker_processes and worker_connections allows you to calculate maxclients value: 
-    # max_clients = worker_processes * worker_connections
 }
 
 
 http {
     include       mime.types;
-    # anything written in /opt/nginx/conf/mime.types is interpreted as if written inside the http { } block
-
     default_type  application/octet-stream;
-    #
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
@@ -41,18 +25,13 @@ http {
     #access_log  logs/access.log  main;
 
     sendfile        on;
-    # If serving locally stored static files, sendfile is essential to speed up the server,
-    # But if using as reverse proxy one can deactivate it
-    
     #tcp_nopush     on;
-    # works opposite to tcp_nodelay. Instead of optimizing delays, it optimizes the amount of data sent at once.
 
     #keepalive_timeout  0;
     keepalive_timeout  65;
-    # timeout during which a keep-alive client connection will stay open.
 
     #gzip  on;
-    # tells the server to use on-the-fly gzip compression.
+
 
     server {
         listen 80;
@@ -68,8 +47,8 @@ http {
         listen [::]:443 ssl default_server;
 
         # SSL configuration
-        ssl_certificate_key /etc/ssl/private/dummy.key;
-        ssl_certificate /etc/ssl/certs/dummy.crt;
+        ssl_certificate_key /etc/letsencrypt/live/opencanvas.online/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/opencanvas.online/fullchain.pem;
 
         server_name opencanvas.online www.opencanvas.online;
 
@@ -81,8 +60,40 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
+
+	location /ws/ {
+            # Proxy to your local WebSocket server (port 8000)
+            proxy_pass http://localhost:8000;
+
+            # Required for WebSocket handshake
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+
+            # Pass original host headers, etc.
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+    	}
     }
 
+    server {
+        listen 1234;
+        listen [::]:1234;
+        server_name opencanvas.online www.opencanvas.online;
+
+        location / {
+            proxy_pass http://localhost:8000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
     # another virtual host using mix of IP-, name-, and port-based configuration
     #
     #server {
